--- a/code/sf_styles.css
+++ b/code/sf_styles.css
@@ -471,21 +471,37 @@ a.exam_ref:hover {
 }
 
 
-.txt_ana_marked_item {
-	background-color: #e67300;
+.txt_ana_deleted_item {
+	background-color: #13234c;
 }
 
 .txt_ana_added_item {
-	background-color: #3665d3;
+	border-top: 2px solid #ffffff;
+	border-bottom: 2px solid #ffffff;
 }
 
-.txt_ana_selected_item {
-	color: #00ff00;
+.txt_added_left {
+	border-left: 2px solid #ffffff;
+}
+
+.txt_added_right {
+	border-right: 2px solid #ffffff;
+}
+
+.is_match_scod {
 	border: 2px solid #00ff00;
 }
 
-.txt_matched {
+.is_match_loc {
 	background-color: #3665d3;
+}
+
+.is_match_ot {
+	background-color: #703800;
+}
+
+.is_match_nt {
+	background-color: #55007f;
 }
 
 .is_verse_oper {
@@ -525,7 +541,7 @@ a.exam_ref:hover {
 	border: 0.2vw solid #55ffff;
 }
 
-.search_header {
+.search_scodes {
 	margin-top: 0.2em;
 	margin-bottom: 0.2em;
 	padding: 0.5em 0.2em 0.5em 0.2em;
@@ -537,16 +553,15 @@ a.exam_ref:hover {
 }
 
 .scode_info{
-	padding: 0em 0.3em 0em 0.3em;
-	border: 2px solid #00ff00;
-	color: #00ff00;
+	margin-left: 1%;
+	margin-right: 1%;
 	font-size: 1.5em;
 }
 
 .grid_search_info {
 	display: grid;
-	margin-left: 3%;
-	margin-right: 3%;
+	margin-left: 1%;
+	margin-right: 1%;
 	width: 100%;
 	grid-template-columns: 30fr;
 	grid-template-rows: auto;
@@ -555,7 +570,7 @@ a.exam_ref:hover {
 
 @media (min-width: 600px) and (orientation:landscape) {
 	.grid_search_info {
-		grid-template-columns: 20fr 20fr 20fr;
+		grid-template-columns: 43fr 20fr 37fr;
 	}
 }
 
@@ -567,36 +582,26 @@ a.exam_ref:hover {
 }
 
 .ot_info{
-	padding: 0em 0.1em 0em 0.1em;
-	border: 2px solid #00ff00;
-	color: #00ff00;
 	font-size: 1.8em;
 }
 
 .nt_info{
-	padding: 0em 0.1em 0em 0.1em;
-	border: 2px solid #00ff00;
-	color: #00ff00;
 	font-size: 1.8em;
 }
 
 .loc_info{
-	padding: 0em 0.1em 0em 0.1em;
 	font-size: 1em;
 }
 
 .rx_in_info{
-	padding: 0em 0.2em 0em 0.2em;
 	font-size: 1em;
 }
 
 .rx_in_info_bib{
-	background-color: #3665d3;
 	font-size: 1.3em;
 }
 
 .intervals_info{
-	padding: 0em 0.1em 0em 0.1em;
 	font-size: 1em;
 }
 
