--- a/web_src/en_mustache/tool.mustache
+++ b/web_src/en_mustache/tool.mustache
@@ -4,7 +4,10 @@
 <div id="id_tool_content" class="tool_content">
 <div id="id_pop_opt_sec"></div>
 
+<!--
+<div class="begin_of_content"></div>
 <h1 class="big_title">Strong Bible Selector</h1>
+-->
 
 <div class="grid_tool">
 	<div id="id_old_test" class="bib_item is_option">
